--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ before_script:
   - python manage.py migrate
   - python manage.py collectstatic --noinput
 
-script:
-  - black --check .
-  - flake8 .
-  - coverage run --source=polls manage.py test
+# script:
+#   - black --check .
+#   - flake8 .
+#   - coverage run --source=polls manage.py test
 
-after_script:
-  - coveralls
+# after_script:
+#   - coveralls
