--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,7 @@ before_script:
 script:
   - black --check .
   - flake8 .
-  
-#   - coverage run --source=polls manage.py test
+  - coverage run --source=polls manage.py test
 
-# after_script:
-#   - coveralls
+after_script:
+  - coveralls
